@@ -441,6 +441,7 @@ Localization
         #LOC_BDArmory_Settings_LowGravDeployment = Start Low-Grav Takeoff Competiton
         #LOC_BDArmory_Settings_EditInputs = Edit Inputs
         #LOC_BDArmory_Settings_CompetitionCloseSettingsOnCompetitionStart = Close Settings When Starting Competitions
+        #LOC_BDArmory_Settings_CompetitionWaypointTimeThreshold = Waypoint Time Threshold
 
         #LOC_BDArmory_BDARemoteOrchestration_Title = BDA Remote Orchestration
         #LOC_BDArmory_Settings_RemoteLogging = Remote Orchestration
